--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,1 +1,10 @@
+// fonts
+$font-main: "Andika", sans-serif;
+$font-special: "Cherry Bomb One", cursive;
 
+// colors
+$color-yellow: #fabd5a;
+$color-light-yellow: #fbe8d7;
+$color-orange: #f2b150;
+$color-black: #000;
+$color-brown: #c27434;
