--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,1 +1,8 @@
-
+<header class="header">
+  <h1 class="title">PAW PAW</h1>
+  <img
+    src="./assets/images/PAW-PAW.png"
+    alt="puppies peeking"
+    class="header__img"
+  />
+</header>
