--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,8 +1,9 @@
-@import 'core/variables';
-@import 'core/reset';
-@import 'components/code';
-@import 'components/links';
-@import 'layout/page';
-@import 'layout/header';
-@import 'layout/footer';
-@import 'pages/index';
+@import "core/variables";
+@import "core/reset";
+@import "components/code";
+@import "components/links";
+@import "layout/page";
+@import "layout/header";
+@import "layout/main-index";
+@import "layout/footer";
+@import "pages/index";
