--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -1,4 +1,12 @@
-.main__list {
-  padding-left: 2rem;
-  padding-bottom: 20px;
+body {
+  background-color: $color-light-yellow;
+  /*  opacity: 0.8; */
+  background-image: linear-gradient($color-orange 2.6px, transparent 2.6px),
+    linear-gradient(to right, $color-orange 2.6px, $color-light-yellow 2.6px);
+  background-size: 52px 52px;
+}
+.container {
+  padding: 10rem 3rem;
+  width: 100%;
+  height: 100vh;
 }
