update index estructure

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -4,7 +4,8 @@
   padding: 0; }
 
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  font-family: "Andika", sans-serif; }
 
 .link {
   text-decoration: none;
@@ -13,28 +14,20 @@ html {
   .link:hover {
     color: #000; }
 
-.header {
+.main-index {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
-  width: 100%;
-  height: auto; }
-  .header .title {
+  flex-direction: column; }
+  .main-index .title {
     font-family: "Cherry Bomb One", cursive;
     font-size: 5rem; }
-  .header__img {
+  .main-index .img-index {
     display: block;
     width: 100%;
     max-width: 350px;
     -o-object-fit: cover;
     object-fit: cover; }
-
-.main-index {
-  display: flex;
-  align-items: flex-end;
-  justify-content: center;
-  padding: 70px 0; }
   .main-index .button-start {
     width: 200px;
     padding: 20px 10px;
@@ -52,7 +45,7 @@ body {
   background-image: linear-gradient(#f2b150 2.6px, transparent 2.6px), linear-gradient(to right, #f2b150 2.6px, #fbe8d7 2.6px);
   background-size: 52px 52px; }
 
-.container {
+.page__index {
   padding: 10rem 3rem;
   width: 100%;
   height: 100vh; }
