--- a/src/html/partials/main-index.html
+++ b/src/html/partials/main-index.html
@@ -1,5 +1,11 @@
 <main class="main-index">
+  <h1 class="title">PAW PAW</h1>
+  <img
+    src="./assets/images/PAW-PAW.png"
+    alt="puppies peeking"
+    class="img-index"
+  />
   <button class="button-start">
-    <a class="link" href=""><p>let´start</p></a>
+    <a class="link" href="./game.html"><p>let´start</p></a>
   </button>
 </main>
