--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -5,7 +5,7 @@ body {
     linear-gradient(to right, $color-orange 2.6px, $color-light-yellow 2.6px);
   background-size: 52px 52px;
 }
-.container {
+.page__index {
   padding: 10rem 3rem;
   width: 100%;
   height: 100vh;
