--- a/src/scss/layout/_main-index.scss
+++ b/src/scss/layout/_main-index.scss
@@ -1,6 +1,6 @@
 .main-index {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
 
@@ -15,16 +15,20 @@
     object-fit: cover;
   }
   .button-start {
-    width: 200px;
-    padding: 20px 10px;
+    width: 210px;
+    margin-top: 120px;
+    padding: 15px 10px;
     border-radius: 50px;
     border: 4px solid $color-brown;
     background-color: $color-orange;
     color: $color-light-yellow;
-    font-size: 3rem;
-
+    font-size: 2.8rem;
+    cursor: pointer;
     p::first-letter {
       text-transform: capitalize;
+    }
+    &:hover {
+      background-color: $color-brown;
     }
   }
 }
