--- a/src/scss/layout/_main-index.scss
+++ b/src/scss/layout/_main-index.scss
@@ -20,15 +20,15 @@
     padding: 15px 10px;
     border-radius: 50px;
     border: 4px solid $color-brown;
-    background-color: $color-orange;
-    color: $color-light-yellow;
+    background-color: $color-brown;
     font-size: 2.8rem;
-    cursor: pointer;
+
     p::first-letter {
       text-transform: capitalize;
     }
     &:hover {
-      background-color: $color-brown;
+      background-color: $color-orange;
+      color: $color-brown;
     }
   }
 }
