--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,5 +5,7 @@
 @import "layout/page";
 @import "layout/header";
 @import "layout/main-index";
+@import "layout/main-game";
 @import "layout/footer";
+@import "pages/game";
 @import "pages/index";
