--- a/src/scss/pages/_game.scss
+++ b/src/scss/pages/_game.scss
@@ -1,12 +1,9 @@
-.page__index {
+.page__game {
   // background pattern
   background-color: $color-yellow;
   /*  opacity: 0.8; */
   background-image: linear-gradient($color-orange 2.6px, transparent 2.6px),
     linear-gradient(to right, $color-orange 2.6px, $color-yellow 2.6px);
   background-size: 52px 52px;
-
-  padding: 10rem 3rem;
-  width: 100%;
-  height: 100vh;
+  position: relative;
 }
