update main game

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,9 +1,8 @@
 <main>
-  <h2>Paw Paw</h2>
+  <h2 class="title__game">Paw Paw</h2>
   <div class="game">
-    <canvas></canvas>
-
-    <section class="game__info">
+    <section>
+      <canvas></canvas>
       <div class="grid-btns">
         <div class="btns">
           <div class="btn-item item-up">
@@ -20,11 +19,20 @@
           </div>
         </div>
       </div>
-      <div class="info">
-        <h3>Life:</h3>
-        <h3>Time:</h3>
-        <h3>Record:</h3>
-      </div>
+    </section>
+
+    <section class="game__info">
+      <h2 class="title__game-desktop title__game">Paw Paw</h2>
+      <!--   <img
+        src="./assets/images/PAW-PAW.png"
+        alt="puppies peeking"
+        class="img-game"
+      /> -->
+      <ul class="info">
+        <li class="subtitle">Life: ❤️❤️❤️</li>
+        <li class="subtitle">Time ⏰: 255555</li>
+        <li class="subtitle">Record 🏁:22225</li>
+      </ul>
     </section>
   </div>
 </main>
