--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -44,14 +44,21 @@ html {
       background-color: #f2b150;
       color: #c27434; }
 
-h2 {
+.title__game {
   font-family: "Cherry Bomb One", cursive;
-  font-size: 4rem;
   text-align: center;
-  padding-top: 20px; }
+  padding-top: 20px;
+  display: block;
+  font-size: 5rem; }
   @media all and (min-width: 1024px) {
-    h2 {
-      font-size: 7rem; } }
+    .title__game {
+      display: none; } }
+  .title__game-desktop {
+    display: none;
+    font-size: 5rem; }
+    @media all and (min-width: 1024px) {
+      .title__game-desktop {
+        display: block; } }
 
 .game {
   display: flex;
@@ -69,20 +76,6 @@ h2 {
     border: 4px solid #c27434;
     background-color: #fbe8d7;
     border-radius: 8px; }
-  .game__info {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column-reverse;
-    margin-top: 30px;
-    gap: 20px; }
-    .game__info .info {
-      width: 280px;
-      background-color: #fbe8d7;
-      border-radius: 8px;
-      padding: 20px; }
-  .game h3 {
-    font-size: 2.5rem; }
   .game .grid-btns {
     display: grid;
     justify-content: center; }
@@ -123,6 +116,34 @@ h2 {
       background-color: rgba(250, 250, 255, 0.85);
       box-shadow: 0.5px 1px 2px rgba(0, 0, 0, 0.3); }
 
+.game__info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+  gap: 20px; }
+  .game__info .info {
+    width: 280px;
+    background-color: #fbe8d7;
+    border-radius: 71% 29% 85% 15% / 34% 62% 38% 66%;
+    padding: 40px;
+    list-style: none; }
+    .game__info .info li {
+      font-size: 2.5rem; }
+  @media all and (min-width: 1024px) {
+    .game__info {
+      flex-direction: column; } }
+
+/* 
+.img-game {
+  display: none;
+  width: 100%;
+  max-width: 350px;
+  object-fit: cover;
+  @media all and (min-width: 1024px) {
+    display: block;
+  }
+} */
 .page__game {
   background-color: #fabd5a;
   /*  opacity: 0.8; */
