--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,1 +1,8 @@
-
+<footer class="footer">
+  <p class="footer__text">
+    &copy <span class="logo">paw paw</span> coded by
+    <a class="link-footer" href="https://github.com/lupeMorales" target="_blank"
+      >lupeMorales</a
+    >
+  </p>
+</footer>
