--- a/src/scss/pages/_game.scss
+++ b/src/scss/pages/_game.scss
@@ -6,4 +6,6 @@
     linear-gradient(to right, $color-orange 2.6px, $color-yellow 2.6px);
   background-size: 52px 52px;
   position: relative;
+
+  height: 100vh;
 }
