--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -2,7 +2,7 @@
   <h2 class="title__game">Paw Paw</h2>
   <div class="game">
     <section>
-      <canvas></canvas>
+      <canvas class="js-canvas"></canvas>
       <div class="grid-btns">
         <div class="btns">
           <div class="btn-item item-up">
