--- a/src/scss/layout/_main-game.scss
+++ b/src/scss/layout/_main-game.scss
@@ -33,6 +33,7 @@
     border: 4px solid $color-brown;
     background-color: $color-light-yellow;
     border-radius: 8px;
+    /*     padding: 5px; */
   }
   .grid-btns {
     display: grid;
