--- a/src/scss/layout/_main-game.scss
+++ b/src/scss/layout/_main-game.scss
@@ -12,6 +12,9 @@
     font-size: 5rem;
     @media all and (min-width: 1024px) {
       display: block;
+      padding: 15px;
+      background-color: $color-light-yellow;
+      border-radius: 76% 24% 70% 30% / 57% 76% 24% 43%;
     }
   }
 }
@@ -33,7 +36,7 @@
     border: 4px solid $color-brown;
     background-color: $color-light-yellow;
     border-radius: 8px;
-    /*     padding: 5px; */
+    padding: 3px;
   }
   .grid-btns {
     display: grid;
@@ -77,7 +80,8 @@
       width: 70px;
     }
     .btn-arrow:hover {
-      background-color: rgba(253, 253, 255, 0.85);
+      background-color: $color-brown;
+      color: $color-light-yellow;
     }
 
     .btn-arrow:active {
