--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -124,6 +124,8 @@ html {
     .game .grid-btns .btn-arrow:hover {
       background-color: #c27434;
       color: #fbe8d7; }
+    .game .grid-btns .btn-arrow:focus {
+      border-color: #c27434; }
     .game .grid-btns .btn-arrow:active {
       background-color: rgba(250, 250, 255, 0.85);
       box-shadow: 0.5px 1px 2px rgba(0, 0, 0, 0.3); }
