--- a/src/scss/layout/_main-game.scss
+++ b/src/scss/layout/_main-game.scss
@@ -83,6 +83,9 @@
       background-color: $color-brown;
       color: $color-light-yellow;
     }
+    .btn-arrow:focus {
+      border-color: $color-brown;
+    }
 
     .btn-arrow:active {
       background-color: rgba(250, 250, 255, 0.85);
