render life emojis

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -30,8 +30,8 @@
       /> -->
       <ul class="info">
         <li class="subtitle">Life: <span class="js-life"></span></li>
-        <li class="subtitle">Time ⏰: 255555</li>
-        <li class="subtitle">Record 🏁:22225</li>
+        <li class="subtitle">Time ⏰: <span class="js-timer"></span></li>
+        <li class="subtitle">Record 🏁:<span class="js-record"></span></li>
       </ul>
     </section>
   </div>
