--- a/src/html/partials/main-index.html
+++ b/src/html/partials/main-index.html
@@ -6,6 +6,6 @@
     class="img-index"
   />
   <button class="button-start">
-    <a class="link" href="./game.html"><p>let´s start</p></a>
+    <a class="link-to-game" href="./game.html"><p>let´s start</p></a>
   </button>
 </main>
