--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -35,4 +35,22 @@
       </ul>
     </section>
   </div>
+
+  <!-- The Modal -->
+  <div class="modal js-modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+      <!--  <span class="close js-btn-close">&times;</span> -->
+      <div class="modal-content__text">
+        <p class="doggy">🐶🐶🐶🐶🐶</p>
+        <h3>game over</h3>
+        <p>try again?</p>
+      </div>
+
+      <button class="button-option js-btn-yes">
+        <a class="link-to-index" href="./index.html">yes</a>
+      </button>
+      <button class="button-option js-btn-no">no</button>
+    </div>
+  </div>
 </main>
