--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -45,7 +45,8 @@
   padding: 5px 10px;
   width: 60px;
   background-color: $color-orange;
-  border: 2px solid $color-brown;
+
+  border-style: none;
   border-radius: 50px;
   text-transform: uppercase;
   color: $color-brown;
