add text result

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -32,6 +32,7 @@
         <li class="subtitle">Life: <span class="js-life"></span></li>
         <li class="subtitle">Time ⏰: <span class="js-timer"></span></li>
         <li class="subtitle">Record 🏁:<span class="js-record"></span></li>
+        <li class="subtitle"><p class="subtitle js-result"></p></li>
       </ul>
     </section>
   </div>
