--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -225,10 +225,14 @@ html {
     padding: 40px;
     list-style: none; }
     .game__info .info li {
-      font-size: 2.5rem; }
+      font-size: 2rem; }
   @media all and (min-width: 1024px) {
     .game__info {
-      flex-direction: column; } }
+      flex-direction: column; }
+      .game__info .info {
+        width: 400px; }
+        .game__info .info li {
+          font-size: 2.5rem; } }
 
 /* 
 .img-game {
