--- a/src/scss/layout/_main-game.scss
+++ b/src/scss/layout/_main-game.scss
@@ -107,12 +107,18 @@
     padding: 40px;
     list-style: none;
     li {
-      font-size: 2.5rem;
+      font-size: 2rem;
     }
   }
 
   @media all and (min-width: 1024px) {
     flex-direction: column;
+    .info {
+      width: 400px;
+      li {
+        font-size: 2.5rem;
+      }
+    }
   }
 }
 /* 
