--- a/src/scss/components/_links.scss
+++ b/src/scss/components/_links.scss
@@ -19,8 +19,8 @@
 .link-footer {
   text-decoration: none;
   cursor: pointer;
-  color: $color-black;
+  color: $color-brown;
   :hover {
-    color: $color-brown;
+    color: $color-orange;
   }
 }
