--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -8,6 +8,7 @@
   align-items: center;
   padding: 10px;
   background-color: $color-light-yellow;
+  color: $color-brown;
   &__text {
     font-size: 1.8rem;
     .logo {
