--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -47,7 +47,8 @@ html {
     .modal-content__text h3,
     .modal-content__text .doggy {
       font-size: 3em;
-      text-transform: uppercase; }
+      text-transform: uppercase;
+      text-align: center; }
 
 .button-option {
   position: relative;
@@ -98,12 +99,15 @@ html {
 .link-footer {
   text-decoration: none;
   cursor: pointer;
-  color: #000; }
+  color: #c27434; }
   .link-footer :hover {
-    color: #c27434; }
+    color: #f2b150; }
 
 .active {
   display: block; }
+
+.page {
+  height: 100vh; }
 
 .main-index {
   display: flex;
@@ -111,9 +115,11 @@ html {
   align-items: center;
   flex-direction: column; }
   .main-index .title {
+    padding: 20px;
+    text-align: center;
     font-family: "Cherry Bomb One", cursive;
     font-size: 5rem;
-    padding: 20px;
+    color: #c27434;
     background-color: #fbe8d7;
     border-radius: 76% 24% 70% 30% / 57% 76% 24% 43%; }
   .main-index .img-index {
@@ -141,10 +147,16 @@ html {
   text-align: center;
   padding-top: 20px;
   display: block;
-  font-size: 5rem; }
+  font-size: 5rem;
+  color: #c27434; }
+  @media all and (min-width: 768px) {
+    .title__game {
+      padding-top: 10px;
+      font-size: 4rem; } }
   @media all and (min-width: 1024px) {
     .title__game {
-      display: none; } }
+      display: none;
+      padding-top: 20px; } }
   .title__game-desktop {
     display: none;
     font-size: 5rem; }
@@ -163,10 +175,17 @@ html {
   padding: 3rem;
   width: 100%;
   height: auto; }
+  @media all and (min-width: 768px) {
+    .game {
+      padding: 1em; } }
   @media all and (min-width: 1024px) {
     .game {
       flex-direction: row;
-      gap: 20px; } }
+      gap: 15px;
+      padding: 6rem 3rem; } }
+  @media all and (min-width: 1440px) {
+    .game {
+      gap: 100px; } }
   .game canvas {
     border: 4px solid #c27434;
     background-color: #fbe8d7;
@@ -175,42 +194,50 @@ html {
   .game .grid-btns {
     display: grid;
     justify-content: center; }
-    .game .grid-btns .btns {
-      display: grid;
-      gap: 5px;
-      justify-self: center;
-      padding: 10px;
-      width: 220px; }
-    .game .grid-btns .btn-item {
-      align-self: end; }
-    .game .grid-btns .item-left {
-      grid-column: 1;
-      grid-row: 1 / span 2; }
-    .game .grid-btns .item-right {
-      grid-column: 3;
-      grid-row: 1 / span 2; }
-    .game .grid-btns .btn-arrow {
-      display: block;
-      background-color: #fbe8d7;
-      border: 1px #fabd5a;
-      color: #000;
-      padding: 8px 10px;
-      font-size: 14px;
-      font-weight: bold;
-      font-family: "Cherry Bomb One", cursive;
-      border-radius: 6px;
-      text-align: center;
-      align-self: end;
-      box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.3);
-      width: 70px; }
-    .game .grid-btns .btn-arrow:hover {
-      background-color: #c27434;
-      color: #fbe8d7; }
-    .game .grid-btns .btn-arrow:focus {
-      border-color: #c27434; }
-    .game .grid-btns .btn-arrow:active {
-      background-color: rgba(250, 250, 255, 0.85);
-      box-shadow: 0.5px 1px 2px rgba(0, 0, 0, 0.3); }
+    @media all and (min-width: 768px) {
+      .game .grid-btns {
+        position: absolute;
+        left: 13%;
+        bottom: 12%; } }
+    @media all and (min-width: 1024px) {
+      .game .grid-btns {
+        position: initial; } }
+  .game .btns {
+    display: grid;
+    gap: 5px;
+    justify-self: center;
+    padding: 10px;
+    width: 220px; }
+  .game .btn-item {
+    align-self: flex-start; }
+  .game .item-left {
+    grid-column: 1;
+    grid-row: 1 / span 2; }
+  .game .item-right {
+    grid-column: 3;
+    grid-row: 1 / span 2; }
+  .game .btn-arrow {
+    display: block;
+    background-color: #fbe8d7;
+    border: 1px #fabd5a;
+    color: #000;
+    padding: 8px 10px;
+    font-size: 14px;
+    font-weight: bold;
+    font-family: "Cherry Bomb One", cursive;
+    border-radius: 6px;
+    text-align: center;
+    align-self: end;
+    box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.3);
+    width: 70px; }
+  .game .btn-arrow:hover {
+    background-color: #c27434;
+    color: #fbe8d7; }
+  .game .btn-arrow:focus {
+    border-color: #c27434; }
+  .game .btn-arrow:active {
+    background-color: rgba(250, 250, 255, 0.85);
+    box-shadow: 0.5px 1px 2px rgba(0, 0, 0, 0.3); }
 
 .game__info {
   display: flex;
@@ -226,24 +253,30 @@ html {
     list-style: none; }
     .game__info .info li {
       font-size: 2rem; }
-  @media all and (min-width: 1024px) {
+  @media all and (min-width: 768px) {
     .game__info {
       flex-direction: column; }
       .game__info .info {
-        width: 400px; }
+        position: absolute;
+        right: 14%;
+        bottom: 8%;
+        padding: 20px; }
+        .game__info .info li {
+          font-size: 2rem; } }
+  @media all and (min-width: 1024px) {
+    .game__info {
+      flex-direction: column;
+      margin-top: 0; }
+      .game__info .info {
+        position: initial;
+        padding: 40px;
+        width: 280px; }
         .game__info .info li {
           font-size: 2.5rem; } }
+  @media all and (min-width: 1440px) {
+    .game__info .info {
+      width: 400px; } }
 
-/* 
-.img-game {
-  display: none;
-  width: 100%;
-  max-width: 350px;
-  object-fit: cover;
-  @media all and (min-width: 1024px) {
-    display: block;
-  }
-} */
 .footer {
   position: fixed;
   bottom: 0;
@@ -253,7 +286,8 @@ html {
   justify-content: center;
   align-items: center;
   padding: 10px;
-  background-color: #fbe8d7; }
+  background-color: #fbe8d7;
+  color: #c27434; }
   .footer__text {
     font-size: 1.8rem; }
     .footer__text .logo {
