--- a/src/scss/layout/_main-game.scss
+++ b/src/scss/layout/_main-game.scss
@@ -4,8 +4,15 @@
   padding-top: 20px;
   display: block;
   font-size: 5rem;
+  color: $color-brown;
+
+  @media all and (min-width: 768px) {
+    padding-top: 10px;
+    font-size: 4rem;
+  }
   @media all and (min-width: 1024px) {
     display: none;
+    padding-top: 20px;
   }
   &-desktop {
     display: none;
@@ -27,11 +34,18 @@
   padding: 3rem;
   width: 100%;
   height: auto;
-
+  @media all and (min-width: 768px) {
+    padding: 1em;
+  }
   @media all and (min-width: 1024px) {
     flex-direction: row;
-    gap: 20px;
+    gap: 15px;
+    padding: 6rem 3rem;
   }
+  @media all and (min-width: 1440px) {
+    gap: 100px;
+  }
+
   canvas {
     border: 4px solid $color-brown;
     background-color: $color-light-yellow;
@@ -41,56 +55,64 @@
   .grid-btns {
     display: grid;
     justify-content: center;
+    @media all and (min-width: 768px) {
+      position: absolute;
+      left: 13%;
+      bottom: 12%;
+    }
+    @media all and (min-width: 1024px) {
+      position: initial;
+    }
+  }
 
-    .btns {
-      display: grid;
-      gap: 5px;
-      justify-self: center;
-      padding: 10px;
-      width: 220px;
-    }
+  .btns {
+    display: grid;
+    gap: 5px;
+    justify-self: center;
+    padding: 10px;
+    width: 220px;
+  }
 
-    .btn-item {
-      align-self: end;
-    }
+  .btn-item {
+    align-self: flex-start;
+  }
 
-    .item-left {
-      grid-column: 1;
-      grid-row: 1 / span 2;
-    }
+  .item-left {
+    grid-column: 1;
+    grid-row: 1 / span 2;
+  }
 
-    .item-right {
-      grid-column: 3;
-      grid-row: 1 / span 2;
-    }
+  .item-right {
+    grid-column: 3;
+    grid-row: 1 / span 2;
+  }
 
-    .btn-arrow {
-      display: block;
-      background-color: $color-light-yellow;
-      border: 1px $color-yellow;
-      color: $color-black;
-      padding: 8px 10px;
-      font-size: 14px;
-      font-weight: bold;
-      font-family: $font-special;
-      border-radius: 6px;
-      text-align: center;
-      align-self: end;
-      box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.3);
-      width: 70px;
-    }
-    .btn-arrow:hover {
-      background-color: $color-brown;
-      color: $color-light-yellow;
-    }
-    .btn-arrow:focus {
-      border-color: $color-brown;
-    }
+  .btn-arrow {
+    display: block;
+    background-color: $color-light-yellow;
+    border: 1px $color-yellow;
+    color: $color-black;
+    padding: 8px 10px;
+    font-size: 14px;
+    font-weight: bold;
+    font-family: $font-special;
+    border-radius: 6px;
+    text-align: center;
+    align-self: end;
+    box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.3);
+    width: 70px;
+  }
+  .btn-arrow:hover {
+    background-color: $color-brown;
+    color: $color-light-yellow;
+  }
+  .btn-arrow:focus {
+    border-color: $color-brown;
+  }
 
-    .btn-arrow:active {
-      background-color: rgba(250, 250, 255, 0.85);
-      box-shadow: 0.5px 1px 2px rgba(0, 0, 0, 0.3);
-    }
+  .btn-arrow:active {
+    background-color: rgba(250, 250, 255, 0.85);
+    box-shadow: 0.5px 1px 2px rgba(0, 0, 0, 0.3);
   }
 }
 
@@ -111,23 +133,33 @@
     }
   }
 
-  @media all and (min-width: 1024px) {
+  @media all and (min-width: 768px) {
     flex-direction: column;
     .info {
-      width: 400px;
+      position: absolute;
+      right: 14%;
+      bottom: 8%;
+      padding: 20px;
+      li {
+        font-size: 2rem;
+      }
+    }
+  }
+  @media all and (min-width: 1024px) {
+    flex-direction: column;
+    margin-top: 0;
+    .info {
+      position: initial;
+      padding: 40px;
+      width: 280px;
       li {
         font-size: 2.5rem;
       }
     }
   }
-}
-/* 
-.img-game {
-  display: none;
-  width: 100%;
-  max-width: 350px;
-  object-fit: cover;
-  @media all and (min-width: 1024px) {
-    display: block;
+  @media all and (min-width: 1440px) {
+    .info {
+      width: 400px;
+    }
   }
-} */
+}
