--- a/src/scss/layout/_main-index.scss
+++ b/src/scss/layout/_main-index.scss
@@ -5,9 +5,11 @@
   flex-direction: column;
 
   .title {
+    padding: 20px;
+    text-align: center;
     font-family: $font-special;
     font-size: 5rem;
-    padding: 20px;
+    color: $color-brown;
     background-color: $color-light-yellow;
     border-radius: 76% 24% 70% 30% / 57% 76% 24% 43%;
   }
