refactor btnYes event btnNo event

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -48,10 +48,10 @@
         <p>try again?</p>
       </div>
 
-      <button class="button-option js-btn-yes">
-        <a class="link-to-index" href="./index.html">yes</a>
+      <button class="button-option js-yes">
+        <!--  <a class="link-to-index" href="./index.html"> -->yes<!-- </a> -->
       </button>
-      <button class="button-option js-btn-no">no</button>
+      <button class="button-option js-no">no</button>
     </div>
   </div>
 
@@ -66,8 +66,8 @@
         <p>play again?</p>
       </div>
 
-      <button class="button-option js-btn-yes">
-        <a class="link-to-index" href="./index.html">yes</a>
+      <button class="button-option js-yes">
+        <!-- <a class="link-to-index" href="./index.html"> -->yes<!-- </a> -->
       </button>
       <button class="button-option js-no">no</button>
     </div>
