--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -111,11 +111,12 @@ html {
 
 .main-index {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   flex-direction: column; }
   .main-index .title {
     padding: 20px;
+    margin-bottom: 40px;
     text-align: center;
     font-family: "Cherry Bomb One", cursive;
     font-size: 5rem;
@@ -130,7 +131,6 @@ html {
     object-fit: cover; }
   .main-index .button-start {
     width: 210px;
-    margin-top: 120px;
     padding: 15px 10px;
     border-radius: 50px;
     border: 4px solid #c27434;
@@ -295,20 +295,21 @@ html {
       font-size: 2.4rem; }
 
 .page__game {
-  background-color: #fabd5a;
-  /*  opacity: 0.8; */
-  background-image: linear-gradient(#f2b150 2.6px, transparent 2.6px), linear-gradient(to right, #f2b150 2.6px, #fabd5a 2.6px);
-  background-size: 52px 52px;
   position: relative;
-  height: 100vh; }
+  height: 100vh;
+  background-color: #fabd5a;
+  background-image: linear-gradient(#f2b150 2.6px, transparent 2.6px), linear-gradient(to right, #f2b150 2.6px, #fabd5a 2.6px);
+  background-size: 52px 52px; }
 
 .page__index {
-  background-color: #fabd5a;
-  /*  opacity: 0.8; */
-  background-image: linear-gradient(#f2b150 2.6px, transparent 2.6px), linear-gradient(to right, #f2b150 2.6px, #fabd5a 2.6px);
-  background-size: 52px 52px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
   padding: 10rem 3rem;
   width: 100%;
-  height: 100vh; }
+  height: 100vh;
+  background-color: #fabd5a;
+  background-image: linear-gradient(#f2b150 2.6px, transparent 2.6px), linear-gradient(to right, #f2b150 2.6px, #fabd5a 2.6px);
+  background-size: 52px 52px; }
 
 /*# sourceMappingURL=main.css.map */
