--- a/src/scss/layout/_main-index.scss
+++ b/src/scss/layout/_main-index.scss
@@ -1,11 +1,12 @@
 .main-index {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
 
   .title {
     padding: 20px;
+    margin-bottom: 40px;
     text-align: center;
     font-family: $font-special;
     font-size: 5rem;
@@ -21,7 +22,7 @@
   }
   .button-start {
     width: 210px;
-    margin-top: 120px;
+
     padding: 15px 10px;
     border-radius: 50px;
     border: 4px solid $color-brown;
