--- a/src/scss/pages/_game.scss
+++ b/src/scss/pages/_game.scss
@@ -1,11 +1,5 @@
 .page__game {
-  // background pattern
-  background-color: $color-yellow;
-  /*  opacity: 0.8; */
-  background-image: linear-gradient($color-orange 2.6px, transparent 2.6px),
-    linear-gradient(to right, $color-orange 2.6px, $color-yellow 2.6px);
-  background-size: 52px 52px;
   position: relative;
-
   height: 100vh;
+  @include background-pattern;
 }
