--- a/src/scss/layout/_main-game.scss
+++ b/src/scss/layout/_main-game.scss
@@ -1,3 +1,6 @@
+main {
+  height: auto;
+}
 .title__game {
   font-family: $font-special;
   text-align: center;
@@ -31,7 +34,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding: 3rem;
+  padding: 1rem 3rem;
   width: 100%;
   height: auto;
   @media all and (min-width: 768px) {
@@ -120,7 +123,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 30px;
+  margin-top: 8px;
   gap: 20px;
   .info {
     width: 280px;
